[metadata]
name = jobhopper
description-file = README.rst
home-page = https://github.com/benley/aurora-jobhopper
author = Benjamin Staffin
author-email = benley@gmail.com
summary = HTTP redirect service for hopping directly to Apache Aurora jobs by name.
license = Apache License, Version 2.0
classifiers =
    Environment :: Console
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[entry_points]
console_scripts =
  jobhopper = jobhopper

[pbr]
warnerrors = True

[wheel]
universal = 1

[flake8]
show-source = True
exclude = .venv,.tox,dist,doc,build,*.egg,*.egg_info/*
